# frieght-inspection-using-computer-vision

./: .env  .gitignore  GETTING_STARTED.md  LICENSE  QUICK_OPTIMIZATION_SCRIPT.py  app.py  container_processor.py  database.py  history_api.py  log.txt  ocr_processor.py  persistence_helper.py  pyproject.toml  requirements.txt  test.py  tests.py  tst.py
backend/: .env  OCR_MIGRATION_SUMMARY.md  README.md  RESTART_GUIDE.md  benchmark_video_processing.py  clear_cache.ps1  clear_cache.py  clear_cache_and_restart.bat  inspections.db.backup  manual_test.py  stream_manager.py  test_model_manager.py  test_ocr_live.py  test_paddleocr.py  test_realtime_video.py  tests.py  video_reader.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/docs/: FILTERING_ENDPOINTS.md  ISO6346_IMPLEMENTATION.md  MONITORING.md  SAVE_WORKFLOW.md
backend/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1374716a89f3e08d___init___py.html  z_1374716a89f3e08d_base_py.html  z_1374716a89f3e08d_container_py.html  z_1374716a89f3e08d_detection_py.html  z_1374716a89f3e08d_frame_py.html  z_1374716a89f3e08d_inspection_py.html  z_4a9cca768ff3c21b___init___py.html  z_4a9cca768ff3c21b_analysis_py.html  z_4a9cca768ff3c21b_history_py.html  z_4a9cca768ff3c21b_metrics_py.html  z_4a9cca768ff3c21b_training_py.html  z_4c37ce8615b5aa70___init___py.html  z_4c37ce8615b5aa70_analysis_service_py.html  z_4c37ce8615b5aa70_damage_classifier_py.html  z_4c37ce8615b5aa70_detection_coordinator_py.html  z_4c37ce8615b5aa70_history_service_py.html  z_4c37ce8615b5aa70_model_manager_py.html  z_4c37ce8615b5aa70_ocr_processor_py.html  z_4c37ce8615b5aa70_persistence_service_py.html  z_4c37ce8615b5aa70_report_service_py.html  z_4c37ce8615b5aa70_result_aggregator_py.html  z_4c37ce8615b5aa70_storage_service_py.html  z_4c37ce8615b5aa70_training_service_py.html  z_4c37ce8615b5aa70_video_processor_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_database_py.html  z_5f5a17c013354698_main_py.html  z_a7b07432402c05f1___init___py.html  z_a7b07432402c05f1_logger_py.html  z_a7b07432402c05f1_metrics_py.html  z_b4c115836e286174___init___py.html  z_b4c115836e286174_analysis_py.html  z_b4c115836e286174_container_py.html  z_b4c115836e286174_detection_py.html  z_b4c115836e286174_frame_py.html  (+1 more)
backend/migrations/: migration_001_add_multi_model_support.py  (+2 more)
docker/: Dockerfile  docker-compose.yml
frontend/: README.md
scripts/: check_database.py  check_iso6346_fields.py  cleanup_orphaned_containers.py  delete_orphaned_containers.py  init_system.py  ocr_processor.py  query_backend_db.py  train_yolo.py  verify_setup.py
training/: Copia de IMG_3905.MOV  training.ipynb
(+73 files in other folders)
